; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_mtx_init_ext.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_locks_arm.c_lck_mtx_init_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_9__ = type { i8*, i64, i64, i32*, i32 }

@LCK_ATTR_NULL = common dso_local global %struct.TYPE_10__* null, align 8
@LockDefaultLckAttr = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@LCK_ATTR_DEBUG = common dso_local global i32 0, align 4
@LCK_MTX_TAG_INDIRECT = common dso_local global i32 0, align 4
@LCK_MTX_TYPE = common dso_local global i8* null, align 8
@LCK_TYPE_MTX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lck_mtx_init_ext(%struct.TYPE_9__* %0, i32* %1, i32* %2, %struct.TYPE_10__* %3) #0 {
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_10__*, align 8
  %9 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store %struct.TYPE_10__* %3, %struct.TYPE_10__** %8, align 8
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %11 = load %struct.TYPE_10__*, %struct.TYPE_10__** @LCK_ATTR_NULL, align 8
  %12 = icmp ne %struct.TYPE_10__* %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %4
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  store %struct.TYPE_10__* %14, %struct.TYPE_10__** %9, align 8
  br label %16

15:                                               ; preds = %4
  store %struct.TYPE_10__* @LockDefaultLckAttr, %struct.TYPE_10__** %9, align 8
  br label %16

16:                                               ; preds = %15, %13
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @LCK_ATTR_DEBUG, align 4
  %21 = and i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %37

23:                                               ; preds = %16
  %24 = load i32*, i32** %6, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %27 = call i32 @lck_mtx_ext_init(i32* %24, i32* %25, %struct.TYPE_10__* %26)
  %28 = load i32, i32* @LCK_MTX_TAG_INDIRECT, align 4
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 4
  store i32 %28, i32* %30, align 8
  %31 = load i32*, i32** %6, align 8
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %32, i32 0, i32 3
  store i32* %31, i32** %33, align 8
  %34 = load i8*, i8** @LCK_MTX_TYPE, align 8
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %35, i32 0, i32 0
  store i8* %34, i8** %36, align 8
  br label %47

37:                                               ; preds = %16
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i32 0, i32 2
  store i64 0, i64* %39, align 8
  %40 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %41 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %40, i32 0, i32 1
  store i64 0, i64* %41, align 8
  %42 = load i8*, i8** @LCK_MTX_TYPE, align 8
  %43 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %43, i32 0, i32 0
  store i8* %42, i8** %44, align 8
  %45 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %46 = call i32 @ordered_store_mtx(%struct.TYPE_9__* %45, i32 0)
  br label %47

47:                                               ; preds = %37, %23
  %48 = load i32*, i32** %7, align 8
  %49 = call i32 @lck_grp_reference(i32* %48)
  %50 = load i32*, i32** %7, align 8
  %51 = load i32, i32* @LCK_TYPE_MTX, align 4
  %52 = call i32 @lck_grp_lckcnt_incr(i32* %50, i32 %51)
  ret void
}

declare dso_local i32 @lck_mtx_ext_init(i32*, i32*, %struct.TYPE_10__*) #1

declare dso_local i32 @ordered_store_mtx(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @lck_grp_reference(i32*) #1

declare dso_local i32 @lck_grp_lckcnt_incr(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
